crates/wolf_lex/tests/snapshots/corpus_snapshots__memory__raw_ub_misaligned_repr_c_field_store.snap
---
source: crates/wolf_lex/tests/corpus_snapshots.rs
expression: lexed.dump(&bytes)
---
    lead  InnerDocComment 0..29 "//! check: run(exit=trap(ub))"
    lead  Whitespace 29..30 "\n"
    lead  InnerDocComment 30..44 "//! phase: wir"
    lead  Whitespace 44..45 "\n"
    lead  InnerDocComment 45..115 "//! conforms: mem.unsafe.raw.4, mem.…"
    lead  Whitespace 115..116 "\n"
    lead  InnerDocComment 116..119 "//!"
    lead  Whitespace 119..120 "\n"
    lead  InnerDocComment 120..192 "//! s213 (wolf-lang#577; s209\'s ques…"
    lead  Whitespace 192..193 "\n"
    lead  InnerDocComment 193..266 "//! asks row L4 of the element, as t…"
    lead  Whitespace 266..267 "\n"
    lead  InnerDocComment 267..337 "//! `{u32, u64}` has alignment 8, so…"
    lead  Whitespace 337..338 "\n"
    lead  InnerDocComment 338..404 "//! an 8-aligned one is L4 (`[mem.un…"
    lead  Whitespace 404..405 "\n"
    lead  InnerDocComment 405..474 "//! `u32` field itself would sit at …"
    lead  Whitespace 474..475 "\n"
    lead  InnerDocComment 475..544 "//! tiers store with the struct\'s al…"
    lead  Whitespace 544..545 "\n"
    lead  InnerDocComment 545..598 "//! read twin is `raw_ub_misaligned_…"
    lead  Whitespace 598..600 "\n\n"
Kw(Import) 600..606 "import"
    trail Whitespace 606..607 " "
Ident 607..608 "c"
    trail Whitespace 608..609 " "
StrBegin(Plain) 609..610 "\""
StrFragment 610..618 "stdlib.h"
StrEnd { dedent: 0 } 618..619 "\""
Term 619..620 "\n"
    lead  Whitespace 620..621 "\n"
PoundBracket 621..623 "#["
Ident 623..627 "repr"
Punct(LParen) 627..628 "("
Ident 628..629 "c"
Punct(RParen) 629..630 ")"
Punct(RBracket) 630..631 "]"
    lead  Whitespace 631..632 "\n"
Kw(Struct) 632..638 "struct"
    trail Whitespace 638..639 " "
Ident 639..643 "Pair"
    trail Whitespace 643..644 " "
Punct(LBrace) 644..645 "{"
    lead  Whitespace 645..650 "\n    "
Ident 650..651 "a"
Punct(Colon) 651..652 ":"
    trail Whitespace 652..653 " "
Ident 653..656 "u32"
Punct(Comma) 656..657 ","
    lead  Whitespace 657..662 "\n    "
Ident 662..663 "b"
Punct(Colon) 663..664 ":"
    trail Whitespace 664..665 " "
Ident 665..668 "u64"
Punct(Comma) 668..669 ","
    lead  Whitespace 669..670 "\n"
Punct(RBrace) 670..671 "}"
Term 671..672 "\n"
    lead  Whitespace 672..673 "\n"
Kw(Fn) 673..675 "fn"
    trail Whitespace 675..676 " "
Ident 676..680 "main"
Punct(LParen) 680..681 "("
Punct(RParen) 681..682 ")"
    trail Whitespace 682..683 " "
Punct(Arrow) 683..685 "->"
    trail Whitespace 685..686 " "
Ident 686..689 "int"
    trail Whitespace 689..690 " "
Punct(LBrace) 690..691 "{"
    lead  Whitespace 691..696 "\n    "
    lead  LineComment 696..768 "// # Safety: DELIBERATELY UNSOUND — …"
    lead  Whitespace 768..773 "\n    "
Kw(Unsafe) 773..779 "unsafe"
    trail Whitespace 779..780 " "
Punct(LBrace) 780..781 "{"
    lead  Whitespace 781..790 "\n        "
Kw(Let) 790..793 "let"
    trail Whitespace 793..794 " "
Ident 794..795 "p"
    trail Whitespace 795..796 " "
Punct(Eq) 796..797 "="
    trail Whitespace 797..798 " "
Ident 798..799 "c"
Punct(Dot) 799..800 "."
Ident 800..806 "calloc"
Punct(LParen) 806..807 "("
Int 807..808 "1"
Punct(Comma) 808..809 ","
    trail Whitespace 809..810 " "
Int 810..812 "32"
Punct(RParen) 812..813 ")"
    trail Whitespace 813..814 " "
Kw(As) 814..816 "as"
    trail Whitespace 816..817 " "
Punct(Star) 817..818 "*"
Ident 818..822 "Pair"
Term 822..823 "\n"
    lead  Whitespace 823..831 "        "
Kw(Let) 831..834 "let"
    trail Whitespace 834..835 " "
Ident 835..836 "s"
    trail Whitespace 836..837 " "
Punct(Eq) 837..838 "="
    trail Whitespace 838..839 " "
Ident 839..840 "p"
Punct(Dot) 840..841 "."
Ident 841..850 "with_addr"
Punct(LParen) 850..851 "("
Ident 851..852 "p"
Punct(Dot) 852..853 "."
Ident 853..857 "addr"
Punct(LParen) 857..858 "("
Punct(RParen) 858..859 ")"
    trail Whitespace 859..860 " "
Punct(Plus) 860..861 "+"
    trail Whitespace 861..862 " "
Int 862..863 "4"
Punct(RParen) 863..864 ")"
Term 864..865 "\n"
    lead  Whitespace 865..873 "        "
Ident 873..874 "s"
Punct(LBracket) 874..875 "["
Int 875..876 "0"
Punct(RBracket) 876..877 "]"
Punct(Dot) 877..878 "."
Ident 878..879 "a"
    trail Whitespace 879..880 " "
Punct(Eq) 880..881 "="
    trail Whitespace 881..882 " "
Int 882..883 "1"
    trail Whitespace 883..885 "  "
    trail LineComment 885..911 "// UB L4: address % 8 == 4"
Term 911..912 "\n"
    lead  Whitespace 912..920 "        "
Ident 920..921 "c"
Punct(Dot) 921..922 "."
Ident 922..926 "free"
Punct(LParen) 926..927 "("
Ident 927..928 "p"
    trail Whitespace 928..929 " "
Kw(As) 929..931 "as"
    trail Whitespace 931..932 " "
Punct(Star) 932..933 "*"
Ident 933..935 "u8"
Punct(RParen) 935..936 ")"
Term 936..937 "\n"
    lead  Whitespace 937..941 "    "
Punct(RBrace) 941..942 "}"
Term 942..943 "\n"
    lead  Whitespace 943..947 "    "
Int 947..948 "0"
Term 948..949 "\n"
Punct(RBrace) 949..950 "}"
Term 950..951 "\n"
Eof 951..951 ""
