crates/wolf_lex/tests/snapshots/corpus_snapshots__memory__raw_ub_misaligned_u16_write.snap
---
source: crates/wolf_lex/tests/corpus_snapshots.rs
expression: lexed.dump(&bytes)
---
    lead  InnerDocComment 0..29 "//! check: run(exit=trap(ub))"
    lead  Whitespace 29..30 "\n"
    lead  InnerDocComment 30..44 "//! phase: wir"
    lead  Whitespace 44..45 "\n"
    lead  InnerDocComment 45..83 "//! conforms: mem.unsafe.raw.4, mem.…"
    lead  Whitespace 83..84 "\n"
    lead  InnerDocComment 84..87 "//!"
    lead  Whitespace 87..88 "\n"
    lead  InnerDocComment 88..152 "//! s209 (ruling #36 = A, wolf-lang#…"
    lead  Whitespace 152..153 "\n"
    lead  InnerDocComment 153..221 "//! `q[0] = v` at an address that is…"
    lead  Whitespace 221..222 "\n"
    lead  InnerDocComment 222..289 "//! alignment (2) is §7 row L4 (`[me…"
    lead  Whitespace 289..290 "\n"
    lead  InnerDocComment 290..359 "//! machine traps `ub` with x-ub-row…"
    lead  Whitespace 359..360 "\n"
    lead  InnerDocComment 360..434 "//! licensed optimization is O12 — t…"
    lead  Whitespace 434..435 "\n"
    lead  InnerDocComment 435..503 "//! its natural alignment (`align 2`…"
    lead  Whitespace 503..504 "\n"
    lead  InnerDocComment 504..576 "//! here is undefined: they compile …"
    lead  Whitespace 576..577 "\n"
    lead  InnerDocComment 577..644 "//! phase this header can promise. A…"
    lead  Whitespace 644..645 "\n"
    lead  InnerDocComment 645..685 "//! lupin 0.1.46 too, ran it as defi…"
    lead  Whitespace 685..687 "\n\n"
Kw(Import) 687..693 "import"
    trail Whitespace 693..694 " "
Ident 694..695 "c"
    trail Whitespace 695..696 " "
StrBegin(Plain) 696..697 "\""
StrFragment 697..705 "stdlib.h"
StrEnd { dedent: 0 } 705..706 "\""
Term 706..707 "\n"
    lead  Whitespace 707..708 "\n"
Kw(Fn) 708..710 "fn"
    trail Whitespace 710..711 " "
Ident 711..715 "main"
Punct(LParen) 715..716 "("
Punct(RParen) 716..717 ")"
    trail Whitespace 717..718 " "
Punct(Arrow) 718..720 "->"
    trail Whitespace 720..721 " "
Ident 721..724 "int"
    trail Whitespace 724..725 " "
Punct(LBrace) 725..726 "{"
    lead  Whitespace 726..731 "\n    "
    lead  LineComment 731..802 "// # Safety: DELIBERATELY UNSOUND — …"
    lead  Whitespace 802..807 "\n    "
Kw(Unsafe) 807..813 "unsafe"
    trail Whitespace 813..814 " "
Punct(LBrace) 814..815 "{"
    lead  Whitespace 815..824 "\n        "
Kw(Let) 824..827 "let"
    trail Whitespace 827..828 " "
Ident 828..829 "p"
    trail Whitespace 829..830 " "
Punct(Eq) 830..831 "="
    trail Whitespace 831..832 " "
Ident 832..833 "c"
Punct(Dot) 833..834 "."
Ident 834..840 "calloc"
Punct(LParen) 840..841 "("
Int 841..842 "1"
Punct(Comma) 842..843 ","
    trail Whitespace 843..844 " "
Int 844..846 "16"
Punct(RParen) 846..847 ")"
    trail Whitespace 847..848 " "
Kw(As) 848..850 "as"
    trail Whitespace 850..851 " "
Punct(Star) 851..852 "*"
Ident 852..855 "u16"
Term 855..856 "\n"
    lead  Whitespace 856..864 "        "
Kw(Let) 864..867 "let"
    trail Whitespace 867..868 " "
Ident 868..869 "q"
    trail Whitespace 869..870 " "
Punct(Eq) 870..871 "="
    trail Whitespace 871..872 " "
Ident 872..873 "p"
Punct(Dot) 873..874 "."
Ident 874..883 "with_addr"
Punct(LParen) 883..884 "("
Ident 884..885 "p"
Punct(Dot) 885..886 "."
Ident 886..890 "addr"
Punct(LParen) 890..891 "("
Punct(RParen) 891..892 ")"
    trail Whitespace 892..893 " "
Punct(Plus) 893..894 "+"
    trail Whitespace 894..895 " "
Int 895..896 "1"
Punct(RParen) 896..897 ")"
Term 897..898 "\n"
    lead  Whitespace 898..906 "        "
Ident 906..907 "q"
Punct(LBracket) 907..908 "["
Int 908..909 "0"
Punct(RBracket) 909..910 "]"
    trail Whitespace 910..911 " "
Punct(Eq) 911..912 "="
    trail Whitespace 912..913 " "
Int 913..914 "7"
    trail Whitespace 914..916 "  "
    trail LineComment 916..942 "// UB L4: address % 2 == 1"
Term 942..943 "\n"
    lead  Whitespace 943..951 "        "
Kw(Let) 951..954 "let"
    trail Whitespace 954..955 " "
Ident 955..956 "b"
    trail Whitespace 956..957 " "
Punct(Eq) 957..958 "="
    trail Whitespace 958..959 " "
Ident 959..960 "p"
    trail Whitespace 960..961 " "
Kw(As) 961..963 "as"
    trail Whitespace 963..964 " "
Punct(Star) 964..965 "*"
Ident 965..967 "u8"
Term 967..968 "\n"
    lead  Whitespace 968..976 "        "
Kw(Let) 976..979 "let"
    trail Whitespace 979..980 " "
Ident 980..981 "v"
    trail Whitespace 981..982 " "
Punct(Eq) 982..983 "="
    trail Whitespace 983..984 " "
Ident 984..985 "b"
Punct(LBracket) 985..986 "["
Int 986..987 "1"
Punct(RBracket) 987..988 "]"
    trail Whitespace 988..989 " "
Kw(As) 989..991 "as"
    trail Whitespace 991..992 " "
Ident 992..995 "int"
Term 995..996 "\n"
    lead  Whitespace 996..1004 "        "
Ident 1004..1005 "c"
Punct(Dot) 1005..1006 "."
Ident 1006..1010 "free"
Punct(LParen) 1010..1011 "("
Ident 1011..1012 "b"
Punct(RParen) 1012..1013 ")"
Term 1013..1014 "\n"
    lead  Whitespace 1014..1022 "        "
Ident 1022..1023 "v"
    trail Whitespace 1023..1024 " "
Punct(Minus) 1024..1025 "-"
    trail Whitespace 1025..1026 " "
Int 1026..1027 "7"
Term 1027..1028 "\n"
    lead  Whitespace 1028..1032 "    "
Punct(RBrace) 1032..1033 "}"
Term 1033..1034 "\n"
Punct(RBrace) 1034..1035 "}"
Term 1035..1036 "\n"
Eof 1036..1036 ""
