crates/wolf_lex/tests/snapshots/corpus_snapshots__memory__raw_ub_misaligned_u32_read.snap
---
source: crates/wolf_lex/tests/corpus_snapshots.rs
expression: lexed.dump(&bytes)
---
    lead  InnerDocComment 0..29 "//! check: run(exit=trap(ub))"
    lead  Whitespace 29..30 "\n"
    lead  InnerDocComment 30..44 "//! phase: wir"
    lead  Whitespace 44..45 "\n"
    lead  InnerDocComment 45..83 "//! conforms: mem.unsafe.raw.4, mem.…"
    lead  Whitespace 83..84 "\n"
    lead  InnerDocComment 84..87 "//!"
    lead  Whitespace 87..88 "\n"
    lead  InnerDocComment 88..159 "//! s209 (ruling #36 = A, wolf-lang#…"
    lead  Whitespace 159..160 "\n"
    lead  InnerDocComment 160..231 "//! an address that is not a multipl…"
    lead  Whitespace 231..232 "\n"
    lead  InnerDocComment 232..301 "//! §7 row L4 (`[mem.unsafe.raw.4]`)…"
    lead  Whitespace 301..302 "\n"
    lead  InnerDocComment 302..374 "//! with x-ub-row L4, clause mem.uns…"
    lead  Whitespace 374..375 "\n"
    lead  InnerDocComment 375..449 "//! is O12 — the compiled tiers emit…"
    lead  Whitespace 449..450 "\n"
    lead  InnerDocComment 450..520 "//! (`align 4`) with no check, so wh…"
    lead  Whitespace 520..521 "\n"
    lead  InnerDocComment 521..591 "//! compile and run it, and `wir` is…"
    lead  Whitespace 591..592 "\n"
    lead  InnerDocComment 592..662 "//! promise. At trunk 8edac3ee every…"
    lead  Whitespace 662..663 "\n"
    lead  InnerDocComment 663..678 "//! as defined."
    lead  Whitespace 678..680 "\n\n"
Kw(Import) 680..686 "import"
    trail Whitespace 686..687 " "
Ident 687..688 "c"
    trail Whitespace 688..689 " "
StrBegin(Plain) 689..690 "\""
StrFragment 690..698 "stdlib.h"
StrEnd { dedent: 0 } 698..699 "\""
Term 699..700 "\n"
    lead  Whitespace 700..701 "\n"
Kw(Fn) 701..703 "fn"
    trail Whitespace 703..704 " "
Ident 704..708 "main"
Punct(LParen) 708..709 "("
Punct(RParen) 709..710 ")"
    trail Whitespace 710..711 " "
Punct(Arrow) 711..713 "->"
    trail Whitespace 713..714 " "
Ident 714..717 "int"
    trail Whitespace 717..718 " "
Punct(LBrace) 718..719 "{"
    lead  Whitespace 719..724 "\n    "
    lead  LineComment 724..795 "// # Safety: DELIBERATELY UNSOUND — …"
    lead  Whitespace 795..800 "\n    "
Kw(Unsafe) 800..806 "unsafe"
    trail Whitespace 806..807 " "
Punct(LBrace) 807..808 "{"
    lead  Whitespace 808..817 "\n        "
Kw(Let) 817..820 "let"
    trail Whitespace 820..821 " "
Ident 821..822 "p"
    trail Whitespace 822..823 " "
Punct(Eq) 823..824 "="
    trail Whitespace 824..825 " "
Ident 825..826 "c"
Punct(Dot) 826..827 "."
Ident 827..833 "calloc"
Punct(LParen) 833..834 "("
Int 834..835 "1"
Punct(Comma) 835..836 ","
    trail Whitespace 836..837 " "
Int 837..839 "16"
Punct(RParen) 839..840 ")"
    trail Whitespace 840..841 " "
Kw(As) 841..843 "as"
    trail Whitespace 843..844 " "
Punct(Star) 844..845 "*"
Ident 845..848 "u32"
Term 848..849 "\n"
    lead  Whitespace 849..857 "        "
Kw(Let) 857..860 "let"
    trail Whitespace 860..861 " "
Ident 861..862 "q"
    trail Whitespace 862..863 " "
Punct(Eq) 863..864 "="
    trail Whitespace 864..865 " "
Ident 865..866 "p"
Punct(Dot) 866..867 "."
Ident 867..876 "with_addr"
Punct(LParen) 876..877 "("
Ident 877..878 "p"
Punct(Dot) 878..879 "."
Ident 879..883 "addr"
Punct(LParen) 883..884 "("
Punct(RParen) 884..885 ")"
    trail Whitespace 885..886 " "
Punct(Plus) 886..887 "+"
    trail Whitespace 887..888 " "
Int 888..889 "2"
Punct(RParen) 889..890 ")"
Term 890..891 "\n"
    lead  Whitespace 891..899 "        "
Kw(Let) 899..902 "let"
    trail Whitespace 902..903 " "
Ident 903..904 "v"
    trail Whitespace 904..905 " "
Punct(Eq) 905..906 "="
    trail Whitespace 906..907 " "
Punct(Star) 907..908 "*"
Ident 908..909 "q"
    trail Whitespace 909..911 "  "
    trail LineComment 911..937 "// UB L4: address % 4 == 2"
Term 937..938 "\n"
    lead  Whitespace 938..946 "        "
Ident 946..947 "c"
Punct(Dot) 947..948 "."
Ident 948..952 "free"
Punct(LParen) 952..953 "("
Ident 953..954 "p"
    trail Whitespace 954..955 " "
Kw(As) 955..957 "as"
    trail Whitespace 957..958 " "
Punct(Star) 958..959 "*"
Ident 959..961 "u8"
Punct(RParen) 961..962 ")"
Term 962..963 "\n"
    lead  Whitespace 963..971 "        "
Ident 971..972 "v"
    trail Whitespace 972..973 " "
Kw(As) 973..975 "as"
    trail Whitespace 975..976 " "
Ident 976..979 "int"
Term 979..980 "\n"
    lead  Whitespace 980..984 "    "
Punct(RBrace) 984..985 "}"
Term 985..986 "\n"
Punct(RBrace) 986..987 "}"
Term 987..988 "\n"
Eof 988..988 ""
