crates/wolf_lex/tests/snapshots/corpus_snapshots__memory__raw_ub_misaligned_u32_write.snap
---
source: crates/wolf_lex/tests/corpus_snapshots.rs
expression: lexed.dump(&bytes)
---
    lead  InnerDocComment 0..29 "//! check: run(exit=trap(ub))"
    lead  Whitespace 29..30 "\n"
    lead  InnerDocComment 30..44 "//! phase: wir"
    lead  Whitespace 44..45 "\n"
    lead  InnerDocComment 45..83 "//! conforms: mem.unsafe.raw.4, mem.…"
    lead  Whitespace 83..84 "\n"
    lead  InnerDocComment 84..87 "//!"
    lead  Whitespace 87..88 "\n"
    lead  InnerDocComment 88..152 "//! s209 (ruling #36 = A, wolf-lang#…"
    lead  Whitespace 152..153 "\n"
    lead  InnerDocComment 153..219 "//! `*q = v` at an address that is n…"
    lead  Whitespace 219..220 "\n"
    lead  InnerDocComment 220..287 "//! alignment (4) is §7 row L4 (`[me…"
    lead  Whitespace 287..288 "\n"
    lead  InnerDocComment 288..357 "//! machine traps `ub` with x-ub-row…"
    lead  Whitespace 357..358 "\n"
    lead  InnerDocComment 358..432 "//! licensed optimization is O12 — t…"
    lead  Whitespace 432..433 "\n"
    lead  InnerDocComment 433..501 "//! its natural alignment (`align 4`…"
    lead  Whitespace 501..502 "\n"
    lead  InnerDocComment 502..574 "//! here is undefined: they compile …"
    lead  Whitespace 574..575 "\n"
    lead  InnerDocComment 575..642 "//! phase this header can promise. A…"
    lead  Whitespace 642..643 "\n"
    lead  InnerDocComment 643..683 "//! lupin 0.1.46 too, ran it as defi…"
    lead  Whitespace 683..685 "\n\n"
Kw(Import) 685..691 "import"
    trail Whitespace 691..692 " "
Ident 692..693 "c"
    trail Whitespace 693..694 " "
StrBegin(Plain) 694..695 "\""
StrFragment 695..703 "stdlib.h"
StrEnd { dedent: 0 } 703..704 "\""
Term 704..705 "\n"
    lead  Whitespace 705..706 "\n"
Kw(Fn) 706..708 "fn"
    trail Whitespace 708..709 " "
Ident 709..713 "main"
Punct(LParen) 713..714 "("
Punct(RParen) 714..715 ")"
    trail Whitespace 715..716 " "
Punct(Arrow) 716..718 "->"
    trail Whitespace 718..719 " "
Ident 719..722 "int"
    trail Whitespace 722..723 " "
Punct(LBrace) 723..724 "{"
    lead  Whitespace 724..729 "\n    "
    lead  LineComment 729..800 "// # Safety: DELIBERATELY UNSOUND — …"
    lead  Whitespace 800..805 "\n    "
Kw(Unsafe) 805..811 "unsafe"
    trail Whitespace 811..812 " "
Punct(LBrace) 812..813 "{"
    lead  Whitespace 813..822 "\n        "
Kw(Let) 822..825 "let"
    trail Whitespace 825..826 " "
Ident 826..827 "p"
    trail Whitespace 827..828 " "
Punct(Eq) 828..829 "="
    trail Whitespace 829..830 " "
Ident 830..831 "c"
Punct(Dot) 831..832 "."
Ident 832..838 "calloc"
Punct(LParen) 838..839 "("
Int 839..840 "1"
Punct(Comma) 840..841 ","
    trail Whitespace 841..842 " "
Int 842..844 "16"
Punct(RParen) 844..845 ")"
    trail Whitespace 845..846 " "
Kw(As) 846..848 "as"
    trail Whitespace 848..849 " "
Punct(Star) 849..850 "*"
Ident 850..853 "u32"
Term 853..854 "\n"
    lead  Whitespace 854..862 "        "
Kw(Let) 862..865 "let"
    trail Whitespace 865..866 " "
Ident 866..867 "q"
    trail Whitespace 867..868 " "
Punct(Eq) 868..869 "="
    trail Whitespace 869..870 " "
Ident 870..871 "p"
Punct(Dot) 871..872 "."
Ident 872..881 "with_addr"
Punct(LParen) 881..882 "("
Ident 882..883 "p"
Punct(Dot) 883..884 "."
Ident 884..888 "addr"
Punct(LParen) 888..889 "("
Punct(RParen) 889..890 ")"
    trail Whitespace 890..891 " "
Punct(Plus) 891..892 "+"
    trail Whitespace 892..893 " "
Int 893..894 "2"
Punct(RParen) 894..895 ")"
Term 895..896 "\n"
    lead  Whitespace 896..904 "        "
Punct(Star) 904..905 "*"
Ident 905..906 "q"
    trail Whitespace 906..907 " "
Punct(Eq) 907..908 "="
    trail Whitespace 908..909 " "
Int 909..910 "7"
    trail Whitespace 910..912 "  "
    trail LineComment 912..938 "// UB L4: address % 4 == 2"
Term 938..939 "\n"
    lead  Whitespace 939..947 "        "
Kw(Let) 947..950 "let"
    trail Whitespace 950..951 " "
Ident 951..952 "b"
    trail Whitespace 952..953 " "
Punct(Eq) 953..954 "="
    trail Whitespace 954..955 " "
Ident 955..956 "p"
    trail Whitespace 956..957 " "
Kw(As) 957..959 "as"
    trail Whitespace 959..960 " "
Punct(Star) 960..961 "*"
Ident 961..963 "u8"
Term 963..964 "\n"
    lead  Whitespace 964..972 "        "
Kw(Let) 972..975 "let"
    trail Whitespace 975..976 " "
Ident 976..977 "v"
    trail Whitespace 977..978 " "
Punct(Eq) 978..979 "="
    trail Whitespace 979..980 " "
Ident 980..981 "b"
Punct(LBracket) 981..982 "["
Int 982..983 "2"
Punct(RBracket) 983..984 "]"
    trail Whitespace 984..985 " "
Kw(As) 985..987 "as"
    trail Whitespace 987..988 " "
Ident 988..991 "int"
Term 991..992 "\n"
    lead  Whitespace 992..1000 "        "
Ident 1000..1001 "c"
Punct(Dot) 1001..1002 "."
Ident 1002..1006 "free"
Punct(LParen) 1006..1007 "("
Ident 1007..1008 "b"
Punct(RParen) 1008..1009 ")"
Term 1009..1010 "\n"
    lead  Whitespace 1010..1018 "        "
Ident 1018..1019 "v"
    trail Whitespace 1019..1020 " "
Punct(Minus) 1020..1021 "-"
    trail Whitespace 1021..1022 " "
Int 1022..1023 "7"
Term 1023..1024 "\n"
    lead  Whitespace 1024..1028 "    "
Punct(RBrace) 1028..1029 "}"
Term 1029..1030 "\n"
Punct(RBrace) 1030..1031 "}"
Term 1031..1032 "\n"
Eof 1032..1032 ""
