crates/wolf_lex/tests/snapshots/corpus_snapshots__memory__raw_ub_misaligned_u64_read.snap
---
source: crates/wolf_lex/tests/corpus_snapshots.rs
expression: lexed.dump(&bytes)
---
    lead  InnerDocComment 0..29 "//! check: run(exit=trap(ub))"
    lead  Whitespace 29..30 "\n"
    lead  InnerDocComment 30..44 "//! phase: wir"
    lead  Whitespace 44..45 "\n"
    lead  InnerDocComment 45..83 "//! conforms: mem.unsafe.raw.4, mem.…"
    lead  Whitespace 83..84 "\n"
    lead  InnerDocComment 84..87 "//!"
    lead  Whitespace 87..88 "\n"
    lead  InnerDocComment 88..158 "//! s209 (ruling #36 = A, wolf-lang#…"
    lead  Whitespace 158..159 "\n"
    lead  InnerDocComment 159..230 "//! at an address that is not a mult…"
    lead  Whitespace 230..231 "\n"
    lead  InnerDocComment 231..303 "//! is §7 row L4 (`[mem.unsafe.raw.4…"
    lead  Whitespace 303..304 "\n"
    lead  InnerDocComment 304..376 "//! with x-ub-row L4, clause mem.uns…"
    lead  Whitespace 376..377 "\n"
    lead  InnerDocComment 377..451 "//! is O12 — the compiled tiers emit…"
    lead  Whitespace 451..452 "\n"
    lead  InnerDocComment 452..522 "//! (`align 8`) with no check, so wh…"
    lead  Whitespace 522..523 "\n"
    lead  InnerDocComment 523..593 "//! compile and run it, and `wir` is…"
    lead  Whitespace 593..594 "\n"
    lead  InnerDocComment 594..664 "//! promise. At trunk 8edac3ee every…"
    lead  Whitespace 664..665 "\n"
    lead  InnerDocComment 665..680 "//! as defined."
    lead  Whitespace 680..682 "\n\n"
Kw(Import) 682..688 "import"
    trail Whitespace 688..689 " "
Ident 689..690 "c"
    trail Whitespace 690..691 " "
StrBegin(Plain) 691..692 "\""
StrFragment 692..700 "stdlib.h"
StrEnd { dedent: 0 } 700..701 "\""
Term 701..702 "\n"
    lead  Whitespace 702..703 "\n"
Kw(Fn) 703..705 "fn"
    trail Whitespace 705..706 " "
Ident 706..710 "main"
Punct(LParen) 710..711 "("
Punct(RParen) 711..712 ")"
    trail Whitespace 712..713 " "
Punct(Arrow) 713..715 "->"
    trail Whitespace 715..716 " "
Ident 716..719 "int"
    trail Whitespace 719..720 " "
Punct(LBrace) 720..721 "{"
    lead  Whitespace 721..726 "\n    "
    lead  LineComment 726..797 "// # Safety: DELIBERATELY UNSOUND — …"
    lead  Whitespace 797..802 "\n    "
Kw(Unsafe) 802..808 "unsafe"
    trail Whitespace 808..809 " "
Punct(LBrace) 809..810 "{"
    lead  Whitespace 810..819 "\n        "
Kw(Let) 819..822 "let"
    trail Whitespace 822..823 " "
Ident 823..824 "p"
    trail Whitespace 824..825 " "
Punct(Eq) 825..826 "="
    trail Whitespace 826..827 " "
Ident 827..828 "c"
Punct(Dot) 828..829 "."
Ident 829..835 "calloc"
Punct(LParen) 835..836 "("
Int 836..837 "1"
Punct(Comma) 837..838 ","
    trail Whitespace 838..839 " "
Int 839..841 "16"
Punct(RParen) 841..842 ")"
    trail Whitespace 842..843 " "
Kw(As) 843..845 "as"
    trail Whitespace 845..846 " "
Punct(Star) 846..847 "*"
Ident 847..850 "u64"
Term 850..851 "\n"
    lead  Whitespace 851..859 "        "
Kw(Let) 859..862 "let"
    trail Whitespace 862..863 " "
Ident 863..864 "q"
    trail Whitespace 864..865 " "
Punct(Eq) 865..866 "="
    trail Whitespace 866..867 " "
Ident 867..868 "p"
Punct(Dot) 868..869 "."
Ident 869..878 "with_addr"
Punct(LParen) 878..879 "("
Ident 879..880 "p"
Punct(Dot) 880..881 "."
Ident 881..885 "addr"
Punct(LParen) 885..886 "("
Punct(RParen) 886..887 ")"
    trail Whitespace 887..888 " "
Punct(Plus) 888..889 "+"
    trail Whitespace 889..890 " "
Int 890..891 "4"
Punct(RParen) 891..892 ")"
Term 892..893 "\n"
    lead  Whitespace 893..901 "        "
Kw(Let) 901..904 "let"
    trail Whitespace 904..905 " "
Ident 905..906 "v"
    trail Whitespace 906..907 " "
Punct(Eq) 907..908 "="
    trail Whitespace 908..909 " "
Ident 909..910 "q"
Punct(LBracket) 910..911 "["
Int 911..912 "0"
Punct(RBracket) 912..913 "]"
    trail Whitespace 913..915 "  "
    trail LineComment 915..941 "// UB L4: address % 8 == 4"
Term 941..942 "\n"
    lead  Whitespace 942..950 "        "
Ident 950..951 "c"
Punct(Dot) 951..952 "."
Ident 952..956 "free"
Punct(LParen) 956..957 "("
Ident 957..958 "p"
    trail Whitespace 958..959 " "
Kw(As) 959..961 "as"
    trail Whitespace 961..962 " "
Punct(Star) 962..963 "*"
Ident 963..965 "u8"
Punct(RParen) 965..966 ")"
Term 966..967 "\n"
    lead  Whitespace 967..975 "        "
Ident 975..976 "v"
    trail Whitespace 976..977 " "
Kw(As) 977..979 "as"
    trail Whitespace 979..980 " "
Ident 980..983 "int"
Term 983..984 "\n"
    lead  Whitespace 984..988 "    "
Punct(RBrace) 988..989 "}"
Term 989..990 "\n"
Punct(RBrace) 990..991 "}"
Term 991..992 "\n"
Eof 992..992 ""
