crates/wolf_lex/tests/snapshots/corpus_snapshots__memory__read_param_escape_field.snap
---
source: crates/wolf_lex/tests/corpus_snapshots.rs
expression: lexed.dump(&bytes)
---
    lead  InnerDocComment 0..22 "//! check: fail(E1002)"
    lead  Whitespace 22..23 "\n"
    lead  InnerDocComment 23..43 "//! phase: typecheck"
    lead  Whitespace 43..44 "\n"
    lead  InnerDocComment 44..95 "//! conforms: mem.tier0.mode.read, m…"
    lead  Whitespace 95..96 "\n"
    lead  InnerDocComment 96..170 "//! s165 (wolf-lang#366) — the move-…"
    lead  Whitespace 170..171 "\n"
    lead  InnerDocComment 171..232 "//! `Box` around its `read` paramete…"
    lead  Whitespace 232..233 "\n"
    lead  InnerDocComment 233..294 "//! `bx.items` and the caller\'s `xs`…"
    lead  Whitespace 294..295 "\n"
    lead  InnerDocComment 295..367 "//! (`bx=4 xs=4`, native and checked…"
    lead  Whitespace 367..368 "\n"
    lead  InnerDocComment 368..438 "//! it is carried: a struct literal,…"
    lead  Whitespace 438..439 "\n"
    lead  InnerDocComment 439..503 "//! the parameter leaves the call ex…"
    lead  Whitespace 503..505 "\n\n"
Kw(Struct) 505..511 "struct"
    trail Whitespace 511..512 " "
Ident 512..515 "Box"
    trail Whitespace 515..516 " "
Punct(LBrace) 516..517 "{"
    lead  Whitespace 517..522 "\n    "
Ident 522..527 "items"
Punct(Colon) 527..528 ":"
    trail Whitespace 528..529 " "
Ident 529..533 "List"
Punct(LBracket) 533..534 "["
Ident 534..537 "int"
Punct(RBracket) 537..538 "]"
Punct(Comma) 538..539 ","
    lead  Whitespace 539..540 "\n"
Punct(RBrace) 540..541 "}"
Term 541..542 "\n"
    lead  Whitespace 542..543 "\n"
Kw(Fn) 543..545 "fn"
    trail Whitespace 545..546 " "
Ident 546..550 "wrap"
Punct(LParen) 550..551 "("
Ident 551..552 "b"
Punct(Colon) 552..553 ":"
    trail Whitespace 553..554 " "
Ident 554..558 "List"
Punct(LBracket) 558..559 "["
Ident 559..562 "int"
Punct(RBracket) 562..563 "]"
Punct(RParen) 563..564 ")"
    trail Whitespace 564..565 " "
Punct(Arrow) 565..567 "->"
    trail Whitespace 567..568 " "
Ident 568..571 "Box"
    trail Whitespace 571..572 " "
Punct(LBrace) 572..573 "{"
    lead  Whitespace 573..578 "\n    "
Ident 578..581 "Box"
    trail Whitespace 581..582 " "
Punct(LBrace) 582..583 "{"
    trail Whitespace 583..584 " "
Ident 584..589 "items"
Punct(Colon) 589..590 ":"
    trail Whitespace 590..591 " "
Ident 591..592 "b"
    trail Whitespace 592..593 " "
Punct(RBrace) 593..594 "}"
    trail Whitespace 594..609 "               "
    trail LineComment 609..650 "// ERROR E1002: `b` leaves inside th…"
Term 650..651 "\n"
Punct(RBrace) 651..652 "}"
Term 652..653 "\n"
    lead  Whitespace 653..654 "\n"
Kw(Fn) 654..656 "fn"
    trail Whitespace 656..657 " "
Ident 657..661 "main"
Punct(LParen) 661..662 "("
Punct(RParen) 662..663 ")"
    trail Whitespace 663..664 " "
Punct(Arrow) 664..666 "->"
    trail Whitespace 666..667 " "
Punct(Not) 667..668 "!"
Ident 668..671 "int"
    trail Whitespace 671..672 " "
Punct(LBrace) 672..673 "{"
    lead  Whitespace 673..678 "\n    "
Kw(Var) 678..681 "var"
    trail Whitespace 681..682 " "
Ident 682..684 "xs"
    trail Whitespace 684..685 " "
Punct(Eq) 685..686 "="
    trail Whitespace 686..687 " "
Ident 687..691 "List"
Punct(LBracket) 691..692 "["
Ident 692..695 "int"
Punct(RBracket) 695..696 "]"
Punct(LParen) 696..697 "("
Punct(RParen) 697..698 ")"
Term 698..699 "\n"
    lead  Whitespace 699..703 "    "
Punct(LParen) 703..704 "("
Kw(Mut) 704..707 "mut"
    trail Whitespace 707..708 " "
Ident 708..710 "xs"
Punct(RParen) 710..711 ")"
Punct(Dot) 711..712 "."
Ident 712..716 "push"
Punct(LParen) 716..717 "("
Int 717..718 "1"
Punct(RParen) 718..719 ")"
Term 719..720 "\n"
    lead  Whitespace 720..724 "    "
Punct(LParen) 724..725 "("
Kw(Mut) 725..728 "mut"
    trail Whitespace 728..729 " "
Ident 729..731 "xs"
Punct(RParen) 731..732 ")"
Punct(Dot) 732..733 "."
Ident 733..737 "push"
Punct(LParen) 737..738 "("
Int 738..739 "2"
Punct(RParen) 739..740 ")"
Term 740..741 "\n"
    lead  Whitespace 741..745 "    "
Punct(LParen) 745..746 "("
Kw(Mut) 746..749 "mut"
    trail Whitespace 749..750 " "
Ident 750..752 "xs"
Punct(RParen) 752..753 ")"
Punct(Dot) 753..754 "."
Ident 754..758 "push"
Punct(LParen) 758..759 "("
Int 759..760 "3"
Punct(RParen) 760..761 ")"
Term 761..762 "\n"
    lead  Whitespace 762..766 "    "
Kw(Var) 766..769 "var"
    trail Whitespace 769..770 " "
Ident 770..772 "bx"
    trail Whitespace 772..773 " "
Punct(Eq) 773..774 "="
    trail Whitespace 774..775 " "
Ident 775..779 "wrap"
Punct(LParen) 779..780 "("
Ident 780..782 "xs"
Punct(RParen) 782..783 ")"
Term 783..784 "\n"
    lead  Whitespace 784..788 "    "
Punct(LParen) 788..789 "("
Kw(Mut) 789..792 "mut"
    trail Whitespace 792..793 " "
Ident 793..795 "bx"
Punct(Dot) 795..796 "."
Ident 796..801 "items"
Punct(RParen) 801..802 ")"
Punct(Dot) 802..803 "."
Ident 803..807 "push"
Punct(LParen) 807..808 "("
Int 808..809 "9"
Punct(RParen) 809..810 ")"
Term 810..811 "\n"
    lead  Whitespace 811..815 "    "
Ident 815..820 "print"
Punct(LParen) 820..821 "("
StrBegin(Plain) 821..822 "\""
StrFragment 822..825 "bx="
InterpOpen 825..826 "{"
Ident 826..828 "bx"
Punct(Dot) 828..829 "."
Ident 829..834 "items"
Punct(Dot) 834..835 "."
Ident 835..838 "len"
InterpClose 838..839 "}"
StrFragment 839..843 " xs="
InterpOpen 843..844 "{"
Ident 844..846 "xs"
Punct(Dot) 846..847 "."
Ident 847..850 "len"
InterpClose 850..851 "}"
StrEnd { dedent: 0 } 851..852 "\""
Punct(RParen) 852..853 ")"
Term 853..854 "\n"
    lead  Whitespace 854..858 "    "
Int 858..859 "0"
Term 859..860 "\n"
Punct(RBrace) 860..861 "}"
Term 861..862 "\n"
Eof 862..862 ""
